# OptGBM

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
optgbm/: __init__.py  alias.py  basic.py  sklearn.py  typing.py  utils.py
tests/: test_sklearn.py  test_utils.py
