[flake8]
doctests = True
# max-complexity = 10

[metadata]
author = Kon
description = Optuna + LightGBM \= OptGBM
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
name = OptGBM
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
  lightgbm>=2.2.2
  natsort
  numpy
  optuna>=0.17
  pandas
  scikit-learn>=0.19.0
packages = find:
python_requires = >=3.8
setup_requires =
  setuptools_scm

[options.extras_require]
testing =
  matplotlib

[options.packages.find]
exclude = tests

[pydocstyle]
convention = numpy
